edited out info

--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
       <div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-
           <li><a href="about.html">About</a></li>
           <li><a href="#Experience">Experience</a></li>
           <li><a href="#Projects">Projects</a></li>
@@ -39,35 +38,7 @@
         </div>
       </div>
     </nav>
-    <section id="landing-profile">
-      <div class="picture_cont">
-        <img src="profilePhote.png" alt="Proflie goes here" />
-      </div>
-      <div class="intro_text">
-        <p class="intro_text_p1">howdy, I,am</p>
-        <h1 class="title">Juan Torres</h1>
-        <p class="intro_text_p2">Software Developer</p>
-        <div class="button_container">
-          <button class="cv" onclick="window.open('resumeJPT.pdf')">
-            Download CV
-          </button>
-        </div>
-        <div class="social_cont">
-          <img
-            src="roundLinkin.webp"
-            alt="my LinkedIn"
-            class="icon"
-            onclick="location.href ='https://www.linkedin.com/'"
-          />
-          <img
-            src="gramlogo.jpeg"
-            alt="my Insta"
-            class="icon"
-            onclick="location.href ='https://www.instagram.com/'"
-          />
-        </div>
-      </div>
-    </section>
+    <section id="landing-profile"></section>
     <script src="script.js"></script>
   </body>
 </html>
