added footer and got about section running

--- a/about.html
+++ b/about.html
@@ -38,7 +38,41 @@
         </div>
       </div>
     </nav>
-    <section id="landing-profile"></section>
+    <p class="title">Know More about Me</p>
+
+    <section id="About">
+      <div class="cool_picture_container">
+        <img src="coolProfiel.jpg" alt="cool photo" class="coolPic" />
+      </div>
+      <div class="details_container">
+        <div class="about-containers">
+          <div class="cotainer">
+            <h3>Experience</h3>
+            <p>3+ years <br />Java develpmet</p>
+          </div>
+          <div class="cotainer">
+            <h3>Education</h3>
+            <p>
+              Bachelors Degree<br />
+              Computer Science
+            </p>
+          </div>
+        </div>
+
+        <div class="text Container">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            voluptatibus laborum repellendus quibusdam doloribus iure, libero,
+            recusandae et minima accusamus laboriosam. Vitae ex doloremque
+            numquam soluta laborum atque repellendus, ad sed cupiditate
+            praesentium distinctio sunt rem ut omnis adipisci unde, illo dolor?
+            Inventore aliquid corporis maxime reprehenderit ipsa dolores
+            laudantium?
+          </p>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
+  <footer>&copy; 2024 Your Website Name. All rights reserved.</footer>
 </html>
