--- a/index.html
+++ b/index.html
@@ -70,4 +70,5 @@
     </section>
     <script src="script.js"></script>
   </body>
+  <footer>&copy; 2024 JPT.INC.LLC.ORG.GOV All rights reserved.</footer>
 </html>
