--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </nav>
-    <p class="title">Know More about Me</p>
+    <p class="title_about">Know More about Me</p>
 
     <section id="About">
       <div class="cool_picture_container">
@@ -48,7 +48,7 @@
         <div class="about-containers">
           <div class="cotainer">
             <h3>Experience</h3>
-            <p>3+ years <br />Java develpmet</p>
+            <p>3+ years <br />Reinforcement learning</p>
           </div>
           <div class="cotainer">
             <h3>Education</h3>
@@ -57,17 +57,21 @@
               Computer Science
             </p>
           </div>
+          <div class="cotainer">
+            <h3>Hobbies</h3>
+            <p>
+              Gaming<br />
+              Chess soccer
+            </p>
+          </div>
         </div>
 
-        <div class="text Container">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-            voluptatibus laborum repellendus quibusdam doloribus iure, libero,
-            recusandae et minima accusamus laboriosam. Vitae ex doloremque
-            numquam soluta laborum atque repellendus, ad sed cupiditate
-            praesentium distinctio sunt rem ut omnis adipisci unde, illo dolor?
-            Inventore aliquid corporis maxime reprehenderit ipsa dolores
-            laudantium?
+        <div class="text_Container">
+          <p class="pg">
+            Hello there! It seems you've stumbled upon my corner of the web,
+            eager to learn a bit more about me. I'm your typical brogrammer
+            hailing from Mexico, with a passion for good food, gaming, and
+            crafting cool creations.
           </p>
         </div>
       </div>
