completed experience section

--- a/experience.html
+++ b/experience.html
@@ -40,49 +40,59 @@
         </div>
       </div>
     </nav>
-    <p class="title_about">Know More about Me</p>
+    <p class="title_exp">Know What I been Up To</p>
 
     <section id="About">
-      <div class="cool_picture_container">
-        <img src="coolProfiel.jpg" alt="cool photo" class="coolPic" />
-      </div>
       <div class="details_container">
         <div class="about-containers">
           <div class="cotainer">
-            <h3>Experience</h3>
-            <p>3+ years <br />Reinforcement learning</p>
+            <h3>The Home Depot</h3>
+            <p>
+              Service Desk Lead<br />
+              Spring 2021 - Summer 2022<br />
+              Streamlined order picking system<br />
+              Implemented customer feedback <br />
+              Achieved increase in overall customer satisfaction, from 78% to an
+              average of 94% within the first 5 months.
+            </p>
+            <img src="depoLogo.jpeg" alt="" class="icon" />
           </div>
           <div class="cotainer">
-            <h3>Education</h3>
+            <h3>AI4ALL: ApplyAI</h3>
             <p>
-              Bachelors Degree<br />
-              Computer Science
+              Develop a pneumonia diagnosis model using computer vision.<br />
+              Implemented Histogram of Oriented Gradients (HOG) for feature
+              extraction.<br />
+              Achieved a high accuracy of 89% in diagnosing pneumonia using
+              X-rays.<br />
             </p>
+            <img src="AI4ALLlogo.jpeg" alt="AI logo" class="icon" />
           </div>
           <div class="cotainer">
-            <h3>Hobbies</h3>
+            <h3>NMSU: CS271</h3>
             <p>
-              Gaming<br />
-              Chess soccer
+              Devlop multiplayer game using fltk GUI library. Implemented
+              sofisticated dynamic pathfinding algorithm Using raw c++. added
+              proximity dectector for enemy players and encoded automaitc
+              defensive behavior.
             </p>
+            <img src="NMlogo.png" alt="" class="icon" />
           </div>
-        </div>
-
-        <div class="text_Container">
-          <p class="pg">
-            Hello there! It seems you've stumbled upon my corner of the web,
-            eager to learn a bit more about me. I'm a passionate programmer from
-            Mexico, embracing the term "brogrammer," with interests in good
-            food, gaming, and crafting cool creations. Currently, I am pursuing
-            my Bachelor's degree in Computer Science at New Mexico State
-            University. Feel free to connect with me on LinkedIn or email me
-            regarding any professional opportunities you might have for me. See
-            you, space cowboy!
-          </p>
+          <div class="cotainer">
+            <h3>NSF: Research Experience for Undergraduates (REU)</h3>
+            <p>
+              <br />
+              Undergraduate researcher Developed proficiency in advanced
+              reinforcement learning methodologies. Achieved a 500% improvement
+              in Proximal Policy Optimization algorithm efficiency by
+              vectorizing.
+            </p>
+            <img src="NSF_LOGO.jpeg" alt="nsf logo" class="icon" />
+          </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
   </body>
-  <footer>&copy; 2024 JPT.LLC.INC.ORG. All rights reserved.</footer>
+  <footer>&copy; 2024 JPT.INC.LLC.ORG.GOV. All rights reserved.</footer>
 </html>
