--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <li><a href="index.html">Home</a></li>
 
           <li><a href="about.html">About</a></li>
-          <li><a href="#Experience">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="#Projects">Projects</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -30,12 +30,13 @@
           <span></span>
         </div>
         <div class="burger-menu-links">
-          <li><a href="#about" onclick="activateMenue()">About</a></li>
+          <li><a href="index.html" onclick="activateMenue()">Home</a></li>
+          <li><a href="about.html" onclick="activateMenue()">About</a></li>
           <li>
-            <a href="#Experience" onclick="activateMenue()">Experience</a>
+            <a href="experience.html" onclick="activateMenue()">Experience</a>
           </li>
           <li><a href="#Projects" onclick="activateMenue()">Projects</a></li>
-          <li><a href="#Contact" onclick="activateMenue()">Contact</a></li>
+          <li><a href="contact.html" onclick="activateMenue()">Contact</a></li>
         </div>
       </div>
     </nav>
@@ -70,5 +71,5 @@
     </section>
     <script src="script.js"></script>
   </body>
-  <footer>&copy; 2024 JPT.INC.LLC.ORG.GOV All rights reserved.</footer>
+  <footer>&copy; 2024 JPT.INC.LLC.ORG.GOV. All rights reserved.</footer>
 </html>
