--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="experience.html">Experience</a></li>
-          <li><a href="#Projects">Projects</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -35,7 +35,9 @@
           <li>
             <a href="experience.html" onclick="activateMenue()">Experience</a>
           </li>
-          <li><a href="#Projects" onclick="activateMenue()">Projects</a></li>
+          <li>
+            <a href="projects.html" onclick="activateMenue()">Projects</a>
+          </li>
           <li><a href="contact.html" onclick="activateMenue()">Contact</a></li>
         </div>
       </div>
