done with responsive, changed stock images, fixed burger menu overlap

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
     </nav>
     <section id="landing-profile">
       <div class="picture_cont">
-        <img src="profilePhote.png" alt="Proflie goes here" />
+        <img
+          src="profilePhote.png"
+          alt="Proflie goes here"
+          class="picture_cont"
+        />
       </div>
       <div class="intro_text">
         <p class="intro_text_p1">howdy, I,am</p>
