--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         <div class="about-containers">
           <div class="details-container">
             <div class="article-container">
-              <img src="project-1.png" alt="Project 1" class="project-img" />
+              <img src="project-1.jpg" alt="Project 1" class="project-img" />
             </div>
             <h2 class="project-title">Project One</h2>
             <div class="btn-container">
@@ -63,7 +63,7 @@
           </div>
           <div class="details-container">
             <div class="article-container">
-              <img src="project-2.png" alt="Project 2" class="project-img" />
+              <img src="project-2.jpg" alt="Project 2" class="project-img" />
             </div>
             <h2 class="project-title">Project Two</h2>
             <div class="btn-container">
@@ -77,7 +77,7 @@
           </div>
           <div class="details-container">
             <div class="article-container">
-              <img src="project-3.png" alt="Project 3" class="project-img" />
+              <img src="project-3.jpg" alt="Project 3" class="project-img" />
             </div>
             <h2 class="project-title">Project Three</h2>
             <div class="btn-container">
